AM_CFLAGS               = -std=gnu99 -pedantic -pipe
AM_CPPFLAGS             = -D_GNU_SOURCE -D_REENTRANT
AM_LDFLAGS              = -rdynamic
LDADD                   = libmachinery.la
lib_LTLIBRARIES         = libmachinery.la
libmachinery_la_SOURCES = machinery.h machinery.c
include_HEADERS         = machinery.h
